[package]
name = "detours-sys"
version = "0.1.0"
authors = ["AlphaModder"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.7", features = [
    "minwindef", "ntdef", "guiddef", "minwinbase", "processthreadsapi", "windef"
] }

[build-dependencies]
cc = "1.0"